--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -28,7 +28,7 @@
         android:layout_alignParentStart="true"
         android:layout_below="@+id/editTextUsername"
         android:hint="Enter Password"
-        android:inputType="textPassword" />
+        android:inputType="" />
 
     <Button
         android:id="@+id/button"
