Tab Nilai Sikap

--- a/app/src/main/res/layout/tab2.xml
+++ b/app/src/main/res/layout/tab2.xml
@@ -196,7 +196,7 @@
         android:layout_below="@+id/textView48"
         android:layout_marginTop="76dp"
         android:ems="10"
-        android:hint="*Catatan Khusus Orang Tua"
+        android:hint="Catatan Khusus Orang Tua"
         android:inputType="text" />
 
     <Button
